[package]
authors = ["Zachary Bush <zach@zmbush.com>"]
description = "A prompt designed by Zach Bush. It works for him. Feel free to use it"
homepage = "https://github.com/zmbush/megaprompt"
license = "Apache-2.0/MIT"
name = "Megaprompt"
publish = false
version = "1.0.0"

[dependencies]
chan = "*"
clap = {version = "4.1.8", features = ["derive"]}
git2 = "0.16.1"
log = "*"
log4rs = "*"
num = "*"
prompt_buffer = {path = "prompt_buffer"}
term = "*"
time = {version = "0.3.20", features = ["parsing", "macros"]}
unix_socket = "*"

[workspace]

[[bin]]
name = "megaprompt"
path = "src/main.rs"
