[package]
authors = ["Zachary Bush <zach@zmbush.com>"]
description = "A prompt designed by Zach Bush. It works for him. Feel free to use it"
homepage = "https://github.com/zmbush/megaprompt"
license = "Apache-2.0/MIT"
name = "Megaprompt"
publish = false
version = "1.0.0"

[dependencies]
chan = "0.1.23"
clap = {version = "4.1.8", features = ["derive"]}
git2 = "0.16.1"
log = "0.4.17"
log4rs = "1.2.0"
prompt_buffer = {path = "prompt_buffer"}
term = "0.7.0"
time = {version = "0.3.20", features = ["parsing", "macros"]}

[workspace]

[[bin]]
name = "megaprompt"
path = "src/main.rs"
